# unified-abstract-dataproducer-template

./: CMakeLists.txt  README.md
src/: UaDI_template.c  UaDI_template.h
